--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,8 @@ sitemap.xml.gz
 /nbproject/
 Thumbs.db
 .sass-cache
+
+# Locally generated
 twentythirteen-www-tg/style.css
+twentythirteen-www-tg/languages/en_US.mo
+twentythirteen-www-tg/languages/fr_FR.mo
