ignore Contact.css (locally generated)

--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,6 @@ Thumbs.db
 
 # Locally generated
 twentythirteen-www-tg/style.css
+twentythirteen-www-tg/Contact.css
 twentythirteen-www-tg/languages/en_US.mo
 twentythirteen-www-tg/languages/fr_FR.mo
