--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ Thumbs.db
 .sass-cache
 
 # Locally generated
+twentythirteen-www-tg/Contact.css
 twentythirteen-www-tg/style.css
 twentythirteen-www-tg/languages/en_US.mo
 twentythirteen-www-tg/languages/fr_FR.mo
+
