added files (and also removed those files from source control by the way)

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ twentythirteen-www-tg/Contact.css
 twentythirteen-www-tg/languages/en_US.mo
 twentythirteen-www-tg/languages/fr_FR.mo
 
+# Downloaded from parent theme
+twentythirteen-www-tg/Less/style.less
+
